--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -36,6 +36,10 @@ jobs:
         run: |
           New-Item -Path .\.sonar\scanner -ItemType Directory
           dotnet tool update dotnet-sonarscanner --tool-path .\.sonar\scanner
+      - name: Copy SonarQubeAnalysisConfig.xml
+        run: |
+          New-Item -Path D:\a\SonarTest\SonarTest\.sonarqube\conf\ -ItemType Directory -Force
+          Copy-Item -Path SonarQubeAnalysisConfig.xml -Destination D:\a\SonarTest\SonarTest\.sonarqube\conf\ -Force
       - name: Build and analyze
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
