--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,22 +1,23 @@
 name: Build
+
 on:
   push:
     branches:
-      - main # the name of your main branch
-  pull_request:
-    types: [opened, synchronize, reopened]
+      - main
+
+
 jobs:
   build:
     name: Build
     runs-on: windows-latest
     steps:
-      - name: Set up JDK 17 
-        uses: actions/setup-java@v1
-        with:
-          java-version: 17
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+      - name: Set up JDK 11
+        uses: actions/setup-java@v1
+        with:
+          java-version: 1.11
       - name: Cache SonarQube packages
         uses: actions/cache@v1
         with:
@@ -36,15 +37,11 @@ jobs:
         run: |
           New-Item -Path .\.sonar\scanner -ItemType Directory
           dotnet tool update dotnet-sonarscanner --tool-path .\.sonar\scanner
-      - name: Copy SonarQubeAnalysisConfig.xml
-        run: |
-          New-Item -Path D:\a\SonarTest\SonarTest\.sonarqube\conf\ -ItemType Directory -Force
-          Copy-Item -Path SonarQubeAnalysisConfig.xml -Destination D:\a\SonarTest\SonarTest\.sonarqube\conf\ -Force
       - name: Build and analyze
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
         shell: powershell
         run: |
-          .\.sonar\scanner\dotnet-sonarscanner begin /k:"sonartest" /d:sonar.token="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="${{ secrets.SONAR_HOST_URL }}"
+          .\.sonar\scanner\dotnet-sonarscanner begin /k:"sonartest" /d:sonar.login="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="${{ secrets.SONAR_HOST_URL }}"
           dotnet build
-          .\.sonar\scanner\dotnet-sonarscanner end /d:sonar.token="${{ secrets.SONAR_TOKEN }}"
+          .\.sonar\scanner\dotnet-sonarscanner end /d:sonar.login="${{ secrets.SONAR_TOKEN }}"
