--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,8 +21,8 @@ jobs:
       - name: Build
         run: dotnet build --configuration Release
 
-      - name: Test
-        run: dotnet test --configuration Release
+      #- name: Test
+       # run: dotnet test --configuration Release
 
       - name: SonarQube Scan
         env:
