--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -36,7 +36,7 @@ jobs:
           echo "sonar.login=${{ secrets.SONAR_TOKEN }}" >> sonar-project.properties
 
           # Run SonarScanner for .NET
-          dotnet tool install --global dotnet-sonarscanner
+          # dotnet tool install --global dotnet-sonarscanner
           dotnet sonarscanner begin /k:"sonartest" /d:sonar.host.url="${{secrets.SONAR_HOST_URL}}" /d:sonar.login="${{ secrets.SONAR_TOKEN }}"
           dotnet build --configuration Release
           dotnet sonarscanner end /d:sonar.login="${{ secrets.SONAR_TOKEN }}"
