--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,11 +29,11 @@ jobs:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: |
           # Configure SonarQube properties
-          echo "sonar.projectKey=sonartest" >> sonar-project.properties
-          echo "sonar.projectName=sonartest" >> sonar-project.properties
-          echo "sonar.sources=." >> sonar-project.properties
-          echo "sonar.host.url=${{secrets.SONAR_HOST_URL}}" >> sonar-project.properties  # Update with your SonarQube server URL
-          echo "sonar.login=${{ secrets.SONAR_TOKEN }}" >> sonar-project.properties
+          #echo "sonar.projectKey=sonartest" >> sonar-project.properties
+          #echo "sonar.projectName=sonartest" >> sonar-project.properties
+          #echo "sonar.sources=." >> sonar-project.properties
+          #echo "sonar.host.url=${{secrets.SONAR_HOST_URL}}" >> sonar-project.properties  # Update with your SonarQube server URL
+          #echo "sonar.login=${{ secrets.SONAR_TOKEN }}" >> sonar-project.properties
 
           # Run SonarScanner for .NET
           # dotnet tool install --global dotnet-sonarscanner
